--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
+        "html2canvas": "^1.4.1",
         "sweetalert2": "^11.11.0"
     }
 }
